--- a/hardware/proto/i2c.org
+++ b/hardware/proto/i2c.org
@@ -1,1 +1,3 @@
 - https://en.wikipedia.org/wiki/I%C2%B2C
+- eeprom i2c programming
+  https://www.hackster.io/gatoninja236/how-to-use-i2c-eeprom-30767d
