--- a/hardware/mcu/pic.org
+++ b/hardware/mcu/pic.org
@@ -15,3 +15,6 @@
     - 13 - PIC32MZ - MIPS
     - 16 - PIC32MM - MIPS - low-power
     - 17 - PIC32MK - MIPS - motor control, IOT...
+
+- Channels
+  - https://www.youtube.com/@RickJimenezElectronics/videos
