--- a/hardware/logic/4000.org
+++ b/hardware/logic/4000.org
@@ -3,19 +3,20 @@
 - logic family of CMOS
 - https://en.wikipedia.org/wiki/List_of_4000-series_integrated_circuits
 
-|-----+---+----+------+--------------------------------------------|
-|     | N | T  |      | description                                |
-|-----+---+----+------+--------------------------------------------|
-|  11 | 4 | LG |      | 2-input NAND                               |
-|  69 | 6 | LG |      | NOT                                        |
-| 106 | 6 | LG |      | NOT                                        |
-|-----+---+----+------+--------------------------------------------|
-|  52 | 2 | AS |      | 4-channel analog multiplexer/demultiplexer |
-|  66 | 4 | AS |      | analog switch (low ON)                     |
-|-----+---+----+------+--------------------------------------------|
-|  17 | 1 | C  |      | decade counter                             |
-|  94 | 1 | SR | SIPO | 8-stage shift-and-store bus                |
-|-----+---+----+------+--------------------------------------------|
+|-----+---+----+--------------------------------------------|
+|     | N | T  | description                                |
+|-----+---+----+--------------------------------------------|
+|  11 | 4 | LG | 2-input NAND                               |
+|  69 | 6 | LG | NOT                                        |
+| 106 | 6 | LG | NOT                                        |
+|-----+---+----+--------------------------------------------|
+|  52 | 2 | AS | 4-channel analog multiplexer/demultiplexer |
+|  66 | 4 | AS | digital/analog switch (low ON)             |
+|-----+---+----+--------------------------------------------|
+|  17 | 1 | C  | decade counter                             |
+|  94 | 1 | SR | 8-stage shift-and-store bus                |
+|  87 | - | -  | DOES NOT EXISTS                            |
+|-----+---+----+--------------------------------------------|
 
 LG = Logic Gates
 C  = Counter
